Implemented N-tier Architecture

--- a/MVCApplication1.DataAccess/MVCApplication1.DataAccess.csproj
+++ b/MVCApplication1.DataAccess/MVCApplication1.DataAccess.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,14 +17,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MVCApplication1.DataAccess\MVCApplication1.DataAccess.csproj" />
     <ProjectReference Include="..\MVCApplication1.Models\MVCApplication1.Models.csproj" />
-    <ProjectReference Include="..\MVCApplication1.Utility\MVCApplication1.Utility.csproj" />
   </ItemGroup>
 
 </Project>
