Implemented Repository Pattern

--- a/MVCApplication1/MVCApplication1.csproj
+++ b/MVCApplication1/MVCApplication1.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\MVCApplication1.Utility\MVCApplication1.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\product\" />
+  </ItemGroup>
+
 </Project>
